# fastapi-template

./: .env  config.json
api/: pyproject.toml
api/src/: database.py
api/src/repositories/: users.py
api/src/repositories/base/: db_repository.py
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/src/: api.py  app.py  asgi.py  config.py  database.py  depends.py  exceptions.py
backend/src/models/: user.py
backend/src/repositories/: users.py
backend/src/repositories/base/: db_repository.py  unit_of_work.py
backend/src/routes/: users.py
backend/src/schemas/: user.py
backend/src/services/: users.py
backend/src/utils/: user_jwt.py
